<resources>
    <!-- navigation drawer menu -->
    <string name="nav_salary">Salary</string>
    <string name="nav_leave">leave</string>
    <string name="nav_attendance">Attendance</string>
    <string name="res_signup">Sign up</string>
    <string name="res_login">Login</string>
    <string name="res_Leavestatus">Leavestatus</string>
    <string name="res_ApplyLeave">ApplyLeave</string>>
    <string name="res_useroremail">Username or E-mail</string>
    <string name="res_password">Password</string>
    <string name="res_email">E-mail</string>
    <string name="res_username">Username</string>
    <string name="res_welcomeMsg">Welcome to HRMS!</string>
    <string name="res_leave_status">Leave Status</string>
    <string name="res_leave_applications">Leave Applications</string>
    <string name="res_hrm">HRM</string>
    <string name="open">Open</string>
    <string name="close">close</string>


    <string name="app_name">HRM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Leave status</item>
        <item>Salary</item>
        <item>Attendance</item>
    </string-array>

    <string name="activity_title_home">Home</string>
    <string name="activity_title_leave_status">Leave status</string>
    <string name="action_salary">salary</string>
    <string name="action_attendance">Attendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

   <!--spinner array-->
        <string-array name="typeOfLeaveArray">
        <item>Type of Leave</item>
        <item>Sick</item>
        <item>Casual</item>
        <item>Privillage</item>

    </string-array>
</resources>