<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LoginActivity">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_welcomeMsg"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_useroremail"
            android:textColorHint="@color/colorPrimary">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_password"
            android:textColorHint="@color/colorPrimary">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText2"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

<!--
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/txtLoginServerNameWrapper"
        android:layout_below="@+id/txtLoginServerNameWrapper"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword" />
-->


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_login"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_style"
            android:textSize="16sp"
            android:padding="7dp" />

        <!--<Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_signup"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:onClick="signup_click"/>-->

</LinearLayout>
