<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtSingupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_email"
        android:textColorHint="@color/colorPrimary">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtSignUpEmail"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtSingupUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_username"
        android:textColorHint="@color/colorPrimary">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtSignupUserName"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_password"
        android:textColorHint="@color/colorPrimary">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtSignUpPassword"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

<!--
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLoginUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_useroremail"
        android:textColorHint="@color/colorPrimary">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="id"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress" />

-->
    <Button
        android:id="@+id/button3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="110dp"

        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_style"
        android:onClick="register_click"
        android:padding="7dp" />


</LinearLayout>


